--- a/database/AcmeTube.Database/Acme.Database.csproj
+++ b/database/AcmeTube.Database/Acme.Database.csproj
@@ -11,6 +11,7 @@
     <None Remove="Migrations\012_create_table_video.sql" />
     <None Remove="Migrations\013_create_table_video_comment.sql" />
     <None Remove="Migrations\014_create_table_playlist.sql" />
+    <None Remove="Migrations\015_create_table_subscription.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
     <EmbeddedResource Include="Migrations\002_create_table_user_token.sql" />
     <EmbeddedResource Include="Migrations\001_create_table_user.sql" />
     <EmbeddedResource Include="Migrations\003_create_table_user_claims.sql" />
+    <EmbeddedResource Include="Migrations\015_create_table_subscription.sql" />
     <EmbeddedResource Include="Migrations\014_create_table_playlist.sql" />
     <EmbeddedResource Include="Migrations\011_create_table_channel.sql" />
     <EmbeddedResource Include="Migrations\012_create_table_video.sql" />
@@ -33,6 +35,7 @@
   <ItemGroup>
     <PackageReference Include="dbup-postgresql" Version="5.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
