--- a/src/AcmeTube.Infrastructure/AcmeTube.Infrastructure.csproj
+++ b/src/AcmeTube.Infrastructure/AcmeTube.Infrastructure.csproj
@@ -7,12 +7,14 @@
   <ItemGroup>
     <PackageReference Include="Hashids.net" Version="1.6.1" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
+    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
     <PackageReference Include="SequentialGuidGenerator" Version="1.1.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
