--- a/database/AcmeTube.Database/Acme.Database.csproj
+++ b/database/AcmeTube.Database/Acme.Database.csproj
@@ -13,6 +13,7 @@
     <None Remove="Migrations\013_create_table_video_rating.sql" />
     <None Remove="Migrations\013_create_table_video_view.sql" />
     <None Remove="Migrations\014_create_table_playlist.sql" />
+    <None Remove="Migrations\014_create_table_playlist_video.sql" />
     <None Remove="Migrations\015_create_table_subscription.sql" />
   </ItemGroup>
 
@@ -29,6 +30,7 @@
     <EmbeddedResource Include="Migrations\003_create_table_user_claims.sql" />
     <EmbeddedResource Include="Migrations\013_create_table_video_view.sql" />
     <EmbeddedResource Include="Migrations\013_create_table_video_rating.sql" />
+    <EmbeddedResource Include="Migrations\014_create_table_playlist_video.sql" />
     <EmbeddedResource Include="Migrations\015_create_table_subscription.sql" />
     <EmbeddedResource Include="Migrations\014_create_table_playlist.sql" />
     <EmbeddedResource Include="Migrations\011_create_table_channel.sql" />
