--- a/src/AcmeTube.Infrastructure/AcmeTube.Infrastructure.csproj
+++ b/src/AcmeTube.Infrastructure/AcmeTube.Infrastructure.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Hashids.net" Version="1.6.1" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
-    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
+    <PackageReference Include="MediaToolkit.Standard" Version="1.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0" />
