--- a/src/AcmeTube.Application/AcmeTube.Application.csproj
+++ b/src/AcmeTube.Application/AcmeTube.Application.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
     <PackageReference Include="AutoMapper" Version="12.0.0" />
