--- a/src/AcmeTube.Api/appsettings.json
+++ b/src/AcmeTube.Api/appsettings.json
@@ -27,9 +27,9 @@
 		}
 	},
 	"mediaSettings": {
-		"folderPath": "/videos",
-		"supportedContentTypes": [ "video/mp4", "video/ts" ],
-		"maximumSizeInMegabytes": 10
+		"ChannelVideoPathTemplate": "/acme-tube/channels/{0}/videos/{1}",
+		"supportedContentTypes": [ "video/mp4", "video/mp2t" ],
+		"maximumSizeInMegabytes": 50
 	},
 	"externalServices": {
 		"dropboxSettings": {
